# system_poc

chat_companion/: README.md  __init__.py  config.py  environment.yml  pyproject.toml
chat_companion/llm/: __init__.py  openrouter.py
chat_companion/src/chat_companion/: __init__.py  chatbot.py  cli.py  config.py
chat_companion/src/chat_companion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
chat_companion/src/chat_companion/llm/: __init__.py  openrouter.py
chat_companion/src/chat_companion/memory/: __init__.py  long_term.py  manager.py  short_term.py
chat_companion/src/chat_companion/prompts/: __init__.py  templates.py
chat_companion/tests/: test_llm_client.py  test_memory.py  test_prompts.py
chat_companion/var/: memory_store.json
healthcare_chat/: plan.md
healthcare_chat/backend/: .env.example  requirements.txt
recommendation system/: AWS_DEPLOYMENT.md  CONSOLIDATION_SUMMARY.md  DOCKER_GUIDE.md  Dockerfile  GETTING_STARTED.md  MEMORY_MANAGEMENT.md  PROJECT_STRUCTURE.md  README.md  deploy-ecr.sh  docker-compose.yml  ecs-task-definition.json  example.py  index.html  main.py  recommendation_engine.py  requirements.txt  setup-aws-infrastructure.sh  setup.sh  test_api.py  test_chatbot.py  test_memory.py
recommendation system/config/: database.py
recommendation system/models/: schemas.py
recommendation system/services/: chatbot.py  collaborative_filtering.py  (+3 more)
video recommendation system/: .copilot-instructions.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICKSTART.md  claude.md  docker-compose.yml  environment.yml
(+149 files in other folders)
